# deterministic-llm-coding

./: Cargo.toml  Makefile  README.md  pmat.toml
docs/: deterministic-llm-coding.md
examples/01-complexity/: README.md
examples/01-complexity/bad/: Cargo.toml
examples/01-complexity/bad/src/: main.rs
examples/01-complexity/good/: Cargo.toml
examples/01-complexity/good/src/: main.rs
examples/02-satd/: README.md
examples/02-satd/bad/: Cargo.toml
examples/02-satd/bad/src/: main.rs
examples/02-satd/good/: Cargo.toml
examples/02-satd/good/src/: main.rs
examples/03-entropy/: README.md
examples/03-entropy/bad/: Cargo.toml
examples/03-entropy/bad/src/: main.rs
examples/03-entropy/good/: Cargo.toml
examples/03-entropy/good/src/: main.rs
examples/05-provability/: README.md
examples/05-provability/bad/: Cargo.toml
examples/05-provability/bad/src/: main.rs
examples/05-provability/good/: Cargo.toml
examples/05-provability/good/src/: main.rs
scripts/: before-after.sh  check-all.sh  fix-guided.sh
